RECENT CHANGES to the 'zipfR' package:

Development version:

Version 0.6-70:

  - parallelization of lnre.bootstrap(), using forked processed on Unix-like platforms
    or with a properly initialized snow cluster (based on the 'parallel' package)
  - bootstrapped confidence intervals in lnre() are speeded up substantially
  - additional productivity measures and some other improvements to productivity.measures()
  - lnre.productivity.measures() computes approximate expectations for samples from LNRE
    population or estimates sampling distribution by parametric bootstrapping
  - plot.tfl() now also plots relative frequencies (pmw) for comparison across 
    different sample sizes, as well as population distributions described by LNRE models
  - plot method (plot.lnre) for LNRE models, showing either the log-transformed type
    density function or the distribution function for a quick visualisation
  - all plot methods accept list of objects in first argument to avoid do.call() trickery,
    but need to be called explicitly rather than via method dispatch in this case 
  - lnre() now allows a user-defined cost function in parameter estimation (e.g to fit
    against Zipf ranking = top part of TFL, or to set parameters based on implicit constraints)
  - bug fix: tfl2spc() no longer includes types with f = 0 in frequency spectrum, and
    spc() now complains in such cases
  - new default colour scheme and line styles

Version 0.6-66:

  - default minimization algorithm changed to "Nelder-Mead", since "Custom" often
    failed to converge on problematic data sets
  - new default cost function "gof" based on the multivariate chi-squared statistic,
    which is closely related to maximum likelihood estimation
  - parameter optimization now performs multiple runs with different random start
    values by default, improving robustness of the parameter estimation
  - lnre.bootstrap() implements parametric bootstrapping from an LNRE model, and